--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<packaging>jar</packaging>
 
 	<name>azuki-web</name>
-	<url>http://maven.apache.org</url>
+	<url>https://github.com/azuki-framework/azuki-web</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
