--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 	<groupId>org.azkfw</groupId>
 	<artifactId>azuki-web</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>azuki-web</name>
@@ -33,7 +33,7 @@
 		<repository>
 			<id>azkfw.org</id>
 			<name>Azuki Framework Temporary Repository</name>
-			<url>file://${project.build.directory}//maven-repository</url>
+			<url>file://${project.build.directory}/../../maven-repository</url>
 		</repository>
 	</distributionManagement>
 	
