--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 	<groupId>org.azkfw</groupId>
 	<artifactId>azuki-web</artifactId>
-	<version>1.0.1</version>
+	<version>1.2.0</version>
 	<packaging>jar</packaging>
 
 	<name>azuki-web</name>
@@ -51,8 +51,8 @@
 	<dependencies>
 		<dependency>
 			<groupId>org.azkfw</groupId>
-			<artifactId>azuki-base</artifactId>
-			<version>1.0.1</version>
+			<artifactId>azuki-business</artifactId>
+			<version>1.2.0</version>
 		</dependency>
 		
 		<dependency>
@@ -68,11 +68,6 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>1.3.2</version>
-		</dependency>            
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
