--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
 	<groupId>org.azkfw</groupId>
 	<artifactId>azuki-web</artifactId>
-	<version>1.4.0-SNAPSHOT</version>
+	<version>1.4.2</version>
 	<packaging>jar</packaging>
 
 	<name>azuki-web</name>
@@ -52,12 +52,12 @@
 		<dependency>
 			<groupId>org.azkfw</groupId>
 			<artifactId>azuki-business</artifactId>
-			<version>1.4.0-SNAPSHOT</version>
+			<version>1.4.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.azkfw</groupId>
 			<artifactId>azuki-servlet</artifactId>
-			<version>1.4.0-SNAPSHOT</version>
+			<version>1.4.2</version>
 		</dependency>
 		
 		<dependency>
